--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
                 <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                   <p>
-                    I have a passion for soccer and programming. In my free time, I enjoy playing and watching soccer
-                    games, as well as learning and practicing new programming skills. I also enjoy playing mobile games
+                    I have love Formula 1 and programming. In my free time, I enjoy playing and watching Formula 1 live stream and my favorite driver is Charles Leclerc 
+                    and as well as learning and practicing new programming skills. I also enjoy playing mobile games
                     on my phone, which provide a fun and engaging way to pass the time. Overall, these hobbies help me
                     stay active and mentally sharp, and I always look forward to engaging in them."
                   </p>
